--- a/my-app/.env
+++ b/my-app/.env
@@ -1,2 +1,2 @@
-VITE_API_BASE_URL=http://localhost:4000/api
-VITE_SOCKET_URL=http://localhost:4000
+VITE_API_BASE_URL=https://chat-app-machine-task.onrender.com/api
+VITE_SOCKET_URL=https://chat-app-machine-task.onrender.com
