--- a/my-app/.env
+++ b/my-app/.env
@@ -1,3 +1,7 @@
 VITE_API_BASE_URL=https://chat-app-machine-task.onrender.com/api
 VITE_SOCKET_URL=https://chat-app-machine-task.onrender.com 
 
+# VITE_API_BASE_URL=http://localhost:4000/api
+# VITE_SOCKET_URL=http://localhost:4000
+
+
